--- a/papaya-security-demo/build.gradle
+++ b/papaya-security-demo/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     compile project(':papaya-security-browser')
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile('org.springframework.boot:spring-boot-starter-test')
+    compile ('org.liquibase:liquibase-core:3.4.2')
 }
