--- a/papaya-security-demo/build.gradle
+++ b/papaya-security-demo/build.gradle
@@ -14,4 +14,11 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile('org.springframework.boot:spring-boot-starter-test')
     compile ('org.liquibase:liquibase-core:3.4.2')
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
+    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.15.0'
+// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 }
