--- a/papaya-generator/build.gradle
+++ b/papaya-generator/build.gradle
@@ -14,5 +14,6 @@ dependencies {
     compile 'com.baomidou:mybatis-plus:2.1.9'
     // https://mvnrepository.com/artifact/org.apache.velocity/velocity-engine-core
     compile group: 'org.apache.velocity', name: 'velocity-engine-core', version: '2.0'
-
+   /* compile 'com.baomidou:mybatisplus-spring-boot-starter:1.0.5'
+    compile 'com.baomidou:mybatis-plus:2.1.9'*/
 }
