--- a/papaya-security-demo/src/main/resources/application.yml
+++ b/papaya-security-demo/src/main/resources/application.yml
@@ -21,6 +21,7 @@ papaya.security:
       browser:
 #        loginPage: /demo-login.html
         loginType: REDIRECT
+        signUpPage: /demo-signup.html
       validateCode:
         imageCode:
           width: 100
