--- a/papaya-security-browser/build.gradle
+++ b/papaya-security-browser/build.gradle
@@ -12,4 +12,5 @@ repositories {
 dependencies {
     compile project(':papaya-security-core')
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.springframework.session', name: 'spring-session'
 }
