--- a/papaya-security-app/src/main/resources/application.yml
+++ b/papaya-security-app/src/main/resources/application.yml
@@ -10,13 +10,9 @@ server:
 #security
 security:
     basic:
-      enabled:  true
+      enabled:  false
 
 papaya.security:
-      browser:
-#        loginPage: /demo-login.html
-        loginType: REDIRECT
-        signUpPage: /demo-signup.html
       validateCode:
         imageCode:
           width: 100
