--- a/papaya-security-app/build.gradle
+++ b/papaya-security-app/build.gradle
@@ -12,4 +12,13 @@ repositories {
 dependencies {
     compile project(':papaya-security-core')
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile ('org.liquibase:liquibase-core:3.4.2')
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
+    compile 'com.baomidou:mybatisplus-spring-boot-starter:1.0.5'
+    compile 'com.baomidou:mybatis-plus:2.1.9'
+    compile group: 'com.github.pagehelper', name: 'pagehelper-spring-boot-starter', version: '1.2.5'
+    compile group: 'joda-time', name: 'joda-time', version: '2.10'
+    compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1'
+
 }
