--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,6 @@ include 'papaya-security-core'
 include 'papaya-security-browser'
 include 'papaya-security-app'
 include 'papaya-security-demo'
+include 'papaya-security-admin'
 include 'papaya-generator'
 
